--- a/client/src/components/Cart/Cart.scss
+++ b/client/src/components/Cart/Cart.scss
@@ -1,12 +1,56 @@
-.cart {
-    position: absolute;
+// Floating Cart Icon
+.floating-cart-icon {
+    position: fixed;
+    bottom: 20px;
     right: 20px;
-    top: 80px;
+    background-color: #2879fe;
+    color: white;
+    padding: 15px;
+    border-radius: 50%;
+    cursor: pointer;
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  
+    .cart-count {
+      position: absolute;
+      top: -5px;
+      right: -5px;
+      background-color: red;
+      color: white;
+      border-radius: 50%;
+      padding: 3px 6px;
+      font-size: 12px;
+    }
+  }
+  
+  // Cart Overlay
+  .cart-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
     z-index: 999;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-start;
+    padding-top: 80px;
+  }
+  
+  // Cart Styles
+  .cart {
+    position: relative;
     background-color: white;
     padding: 20px;
-    -webkit-box-shadow: 0px 0px 7px -5px rgba(0, 0, 0, 0.5);
+    width: 350px;
+    max-height: 80vh;
+    overflow-y: auto;
     box-shadow: 0px 0px 7px -5px rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
   
     h1 {
       margin-bottom: 30px;
@@ -59,7 +103,7 @@
     }
   
     button {
-      width: 250px;
+      width: 100%;
       padding: 10px;
       display: flex;
       align-items: center;
@@ -73,8 +117,8 @@
       margin-bottom: 20px;
     }
   
-    .reset{
-      color:red;
+    .reset {
+      color: red;
       font-size: 12px;
       cursor: pointer;
     }
